# AINB

./: .gitignore  README.md  pyproject.toml  setup.py
ainb/: __init__.py  __main__.py  action.py  ainb.py  attachment.py  blackboard.py  command.py  common.py  enum_resolve.py  module.py  node.py  node_def.py  param.py  param_common.py  property.py  replacement.py  state.py  utils.py
ainb/expression/: __init__.py  assemble.py  common.py  disassemble.py  expression.py  instruction.py  module.py  parser.py  write_context.py
ainb/graph/: __init__.py  __main__.py  graph.py
tests/: test.py
