[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "ainb"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mmh3"
]
dynamic = [
    "version"
]
license-files = [
    "LICENSE"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
graph = [
    "graphviz"
]

[project.scripts]
ainb = "ainb.__main__:main"
ainb-graph = "ainb.graph.__main__:main"

[tools.setuptools]
include-package-data = true
packages = [
    "ainb"
]

[tool.setuptools.dynamic]
version = {attr = "ainb.__version__"}